<resources>
    <string name="app_name">Counting Calories</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="amount_hint">Amount</string>
    <string name="label_hint">Label</string>
    <string name="breakfast">Breakfast</string>
    <string name="lunch">Lunch</string>
    <string name="dinner">Dinner</string>
    <string name="add_entry">Add entry</string>
    <string name="thigh">Thigh</string>
    <string name="waist">Waist</string>
    <string name="bicep">Bicep</string>
    <string name="label_and_amount">%1$s: %2$d</string>
</resources>
