<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:padding="4dp"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/prevDateButton"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"/>
        <TextView
            android:id="@+id/currentDateView"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="4"
            android:hint="current date"
            android:gravity="center"/>
        <Button
            android:id="@+id/nextDateButton"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"/>
    </LinearLayout>

    <TextView
        android:id="@+id/caloriesTotalView"
        android:layout_width="match_parent"
        android:clickable="true"
        android:gravity="center"
        android:textSize="16sp"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/calorieEntryView"
            android:hint="@string/amount_hint"
            android:inputType="number"
            android:layout_margin="4dp"
            android:imeOptions="actionNext"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="wrap_content" />

        <EditText
            android:id="@+id/calorieLabelView"
            android:hint="@string/label_hint"
            android:inputType="text"
            android:imeOptions="actionDone"
            android:layout_margin="4dp"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/confirmButton"
            android:background="@drawable/radio_text_view_selector"
            android:text="@string/add_entry"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </LinearLayout>

    <!-- TODO: make this into custom view with CheckedTextView instead so you can use elevation-->
    <RadioGroup
        android:id="@+id/foodPeriodRadioGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <RadioButton
            android:id="@+id/breakfastSelector"
            android:layout_height="wrap_content"
            android:minHeight="20dp"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:layout_marginEnd="4dp"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="4dp"
            android:elevation="4dp"
            android:background="@drawable/radio_text_view_selector"
            android:button="@null"
            android:text="@string/breakfast"
            android:textSize="16sp" />

        <RadioButton
            android:id="@+id/lunchSelector"
            android:layout_height="wrap_content"
            android:minHeight="20dp"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_margin="4dp"
            android:elevation="4dp"
            android:text="@string/lunch"
            android:gravity="center"
            android:background="@drawable/radio_text_view_selector"
            android:button="@null"
            android:textSize="16sp" />

        <RadioButton
            android:id="@+id/dinnerSelector"
            android:layout_height="wrap_content"
            android:minHeight="20dp"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:elevation="4dp"
            android:layout_marginStart="4dp"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="4dp"
            android:text="@string/dinner"
            android:gravity="center"
            android:background="@drawable/radio_text_view_selector"
            android:button="@null"
            android:textSize="16sp" />
    </RadioGroup>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/breakfastCaloriesView"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" />
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/lunchCaloriesView"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" />
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/dinnerCaloriesView"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" />
    </LinearLayout>


</LinearLayout>